# pdftoolkit

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml  rust_errors.txt
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/ffi/: pdf_bridge.dart
lib/core/models/: pdf_file_model.dart
lib/core/providers/: app_provider.dart
lib/core/theme/: app_theme.dart  color_schemes.dart  tool_colors.dart
lib/features/compress/: compress_screen.dart
lib/features/convert/: convert_screen.dart
lib/features/files/: files_screen.dart
lib/features/merge/: merge_screen.dart
lib/features/onboarding/: onboarding_screen.dart
lib/features/pdf_to_images/: pdf_to_images_screen.dart
lib/features/protect/: image_to_pdf_screen.dart  protect_screen.dart  unlock_screen.dart
lib/features/settings/: settings_screen.dart
lib/features/sign/: sign_screen.dart
lib/features/split/: split_screen.dart
lib/features/workspace/: workspace_screen.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/api/: pdf_ops.dart
rust/: Cargo.toml  frb_generated.dart
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  pdf_ops.rs  types.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_pdftoolkit.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pdftoolkit.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html
(+12 files in other folders)
