[package]
name = "rust_lib_pdftoolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_pdftoolkit"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lopdf = { version = "0.34", features = ["nom_parser"] }
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
zip = "2"
quick-xml = "0.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
